fixed overflow-scrolling-touch vertical scrollbar on ios7

--- a/web/app/themes/waq2015/assets/css/application.css
+++ b/web/app/themes/waq2015/assets/css/application.css
@@ -838,7 +838,7 @@ nav[role="navigation"] .secondary {
   transition-delay: 1080ms !important; }
 
 .expandable {
-  width: 90%;
+  width: 100%;
   -webkit-transition: width 200ms cubic-bezier(0.2, 0, 0.4, 1);
   -moz-transition: width 200ms cubic-bezier(0.2, 0, 0.4, 1);
   -ms-transition: width 200ms cubic-bezier(0.2, 0, 0.4, 1);
@@ -3355,7 +3355,12 @@ footer .logo-o2 {
   body > .wrapper {
     position: relative;
     z-index: 1;
-    background: white; }
+    background: white;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); }
     body > .wrapper:before {
       content: "";
       position: absolute;
@@ -3373,7 +3378,7 @@ footer .logo-o2 {
       -ms-transition: opacity 320ms ease 0, z-index 0 linear 320ms;
       -o-transition: opacity 320ms ease 0, z-index 0 linear 320ms;
       transition: opacity 320ms ease 0, z-index 0 linear 320ms; }
-    body > .wrapper[style]:before {
+    body > .wrapper.active:before {
       -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
       filter: alpha(opacity=100);
       opacity: 1;
@@ -3513,7 +3518,7 @@ footer .logo-o2 {
       font-size: 2.5em; }
 
   .schedules .schedule {
-    padding: 50px 20px; }
+    padding: 50px 10px; }
   .schedules table {
     max-width: 960px; } }
 @media screen and (min-width: 1024px) {
@@ -3589,15 +3594,18 @@ footer .logo-o2 {
     font-size: 0;
     width: 100%;
     position: relative;
-    overflow-x: auto;
-    overflow-y: hidden; }
+    overflow-y: hidden;
+    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
+    line-height: 0; }
     .schedules thead tr > *, .no-js .schedules tbody tr > *,
     .schedules tbody .swiper > * {
       display: inline-block;
       *display: inline;
       zoom: 1;
       white-space: normal;
-      font-size: 14px; }
+      font-size: 14px;
+      line-height: 1.2; }
   .schedules thead {
     display: none; }
     .no-js .schedules thead {
@@ -3620,7 +3628,8 @@ footer .logo-o2 {
     .schedules tbody th .title, .schedules tbody th nav[role="navigation"] ul a, nav[role="navigation"] ul .schedules tbody th a {
       display: inline-block;
       *display: inline;
-      zoom: 1; }
+      zoom: 1;
+      font-size: 1.25em; }
   .schedules tbody td {
     height: auto;
     width: 40%; }
@@ -3632,23 +3641,25 @@ footer .logo-o2 {
         display: block; }
     .schedules tbody td.empty {
       display: none; }
-  .schedules .swiper .session .location.border-bottom:before {
-    display: none; }
-  .schedules .swiper .session .location.border-bottom > .title, .schedules .swiper .session nav[role="navigation"] ul .location.border-bottom > a, nav[role="navigation"] ul .schedules .swiper .session .location.border-bottom > a {
-    display: none; }
-  .schedules .swiper .session .location[location] {
-    position: relative; }
-    .schedules .swiper .session .location[location] > * {
-      display: block;
-      padding-left: 20px; }
-    .schedules .swiper .session .location[location]:before {
-      position: absolute;
-      display: block;
-      top: 0;
-      left: 0;
-      height: 100%;
-      border-right: white 10px solid;
-      border-color: inherit; } }
+  .schedules .swiper .session {
+    margin-bottom: 0; }
+    .schedules .swiper .session .location.border-bottom:before {
+      display: none; }
+    .schedules .swiper .session .location.border-bottom > .title, .schedules .swiper .session nav[role="navigation"] ul .location.border-bottom > a, nav[role="navigation"] ul .schedules .swiper .session .location.border-bottom > a {
+      display: none; }
+    .schedules .swiper .session .location[location] {
+      position: relative; }
+      .schedules .swiper .session .location[location] > * {
+        display: block;
+        padding-left: 20px; }
+      .schedules .swiper .session .location[location]:before {
+        position: absolute;
+        display: block;
+        top: 0;
+        left: 0;
+        height: 100%;
+        border-right: white 10px solid;
+        border-color: inherit; } }
 @media screen and (max-width: 1023px) {
   section.intro {
     height: auto; }
@@ -4060,12 +4071,21 @@ footer .logo-o2 {
       padding: 0 10px 20px; } }
 @media screen and (max-width: 580px) {
   section.intro .col.main.left {
-    text-align: center; }
-  section.intro .col.main.left > *, section.intro .col.main.right > * {
+    text-align: center;
     padding-left: 0;
     padding-right: 0; }
+  section.intro .col.main.left > *, section.intro .col.main.right > * {
+    padding-left: 0;
+    padding-right: 0;
+    top: auto;
+    height: auto;
+    width: 100%; }
   section.intro .main.left {
     padding: 50px 20px 10px 20px; }
+    section.intro .main.left .middle {
+      top: auto; }
+      section.intro .main.left .middle img {
+        padding: 0; }
   section.intro .main.right {
     position: relative;
     top: auto;
@@ -4076,27 +4096,18 @@ footer .logo-o2 {
       position: static;
       left: auto;
       width: 100%; }
-    section.intro .main.right .top {
-      height: auto;
-      width: 100%; }
-      section.intro .main.right .top .left {
-        padding-right: 50px;
-        padding-left: 0; }
-      section.intro .main.right .top .right {
-        padding-left: 50px;
-        padding-right: 0; }
-      section.intro .main.right .top .title, section.intro .main.right .top nav[role="navigation"] ul a, nav[role="navigation"] ul section.intro .main.right .top a {
-        font-size: 1.25em; }
-    section.intro .main.right .middle {
-      top: auto;
-      height: auto; }
-      section.intro .main.right .middle .title.main, section.intro .main.right .middle nav[role="navigation"] ul a.main, nav[role="navigation"] ul section.intro .main.right .middle a.main {
-        font-size: 1.75em; }
-    section.intro .main.right .bottom {
-      top: auto;
-      height: auto; }
-      section.intro .main.right .bottom .title.huge, section.intro .main.right .bottom nav[role="navigation"] ul a.huge, nav[role="navigation"] ul section.intro .main.right .bottom a.huge {
-        font-size: 1.25em; }
+    section.intro .main.right .top .left {
+      padding-right: 50px;
+      padding-left: 0; }
+    section.intro .main.right .top .right {
+      padding-left: 50px;
+      padding-right: 0; }
+    section.intro .main.right .top .title, section.intro .main.right .top nav[role="navigation"] ul a, nav[role="navigation"] ul section.intro .main.right .top a {
+      font-size: 1.25em; }
+    section.intro .main.right .middle .title.main, section.intro .main.right .middle nav[role="navigation"] ul a.main, nav[role="navigation"] ul section.intro .main.right .middle a.main {
+      font-size: 1.75em; }
+    section.intro .main.right .bottom .title.huge, section.intro .main.right .bottom nav[role="navigation"] ul a.huge, nav[role="navigation"] ul section.intro .main.right .bottom a.huge {
+      font-size: 1.25em; }
 
   .features .infos {
     font-size: 0.625em; }
