--- a/web/app/themes/waq2015/assets/sass/mediaqueries/_xsmall.sass
+++ b/web/app/themes/waq2015/assets/sass/mediaqueries/_xsmall.sass
@@ -13,14 +13,23 @@
     .col.main
       &.left
         text-align: center
+        padding-left: 0
+        padding-right: 0
       &.left,
       &.right
         >*
           padding-left: 0
           padding-right: 0
+          top: auto
+          height: auto
+          width: 100%
 
     .main.left
       padding: $xlarge $medium $small $medium
+      .middle
+        top: auto
+        img
+          padding: 0
 
     .main.right
       position: relative
@@ -33,8 +42,6 @@
         left: auto
         width: 100%
       .top
-        height: auto
-        width: 100%
         .left
           padding-right: $xlarge
           padding-left: 0
@@ -45,13 +52,9 @@
           font-size: 1.25em
 
       .middle
-        top: auto
-        height: auto
         .title.main
           font-size: 1.75em
       .bottom
-        top: auto
-        height: auto
         .title.huge
           font-size: 1.25em
 
