--- a/web/app/themes/waq2015/assets/sass/partials/_modules.sass
+++ b/web/app/themes/waq2015/assets/sass/partials/_modules.sass
@@ -108,7 +108,7 @@
 //
 // EXPANDABLES
 .expandable
-  width: 90%
+  width: 100%
   +prefix(transition, width 200ms $ease)
 
 //
